[gd_scene load_steps=75 format=3 uid="uid://d0oqtaecqolpe"]

[ext_resource type="Texture2D" uid="uid://py4xd4x7cpe5" path="res://assets/player/head/head01.png" id="1"]
[ext_resource type="Script" path="res://src/player/player_state_machine.gd" id="2"]
[ext_resource type="Material" uid="uid://cir1cbas5byei" path="res://assets/shader/material/erase.tres" id="3"]
[ext_resource type="Script" path="res://src/player/player.gd" id="4"]
[ext_resource type="Script" path="res://src/player/states/fall.gd" id="5"]
[ext_resource type="Script" path="res://src/player/states/respawn.gd" id="6"]
[ext_resource type="Script" path="res://src/player/states/despawn.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://w2bcgdk824k7" path="res://assets/player/body/body01.png" id="8"]
[ext_resource type="AudioStream" uid="uid://cbfuxvde83bj7" path="res://assets/sfx/spawn.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://mq02q0n28g6j" path="res://assets/sfx/delete.wav" id="10"]
[ext_resource type="Texture2D" uid="uid://4tgnghjfpqbs" path="res://assets/shader/texture/erase_texture_up.png" id="11"]
[ext_resource type="Texture2D" uid="uid://bjpcyn4kljrg0" path="res://assets/player/player_shield_spritesheet.png" id="12"]
[ext_resource type="Shader" path="res://assets/shader/script/erase.gdshader" id="13"]
[ext_resource type="Texture2D" uid="uid://dpuiciiyrcc0x" path="res://assets/shader/texture/erase_shield.png" id="14"]
[ext_resource type="Environment" uid="uid://cubx17s0fe45p" path="res://src/escape_env.tres" id="15"]
[ext_resource type="AudioStream" uid="uid://cdqf8jhx5tdj1" path="res://assets/sfx/shield.wav" id="16"]

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = ExtResource("13")
shader_parameter/progress = 1.2
shader_parameter/color = Color(0, 1, 1.5, 1)
shader_parameter/noise = ExtResource("14")

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(64, 112)

[sub_resource type="CapsuleShape2D" id="3"]
radius = 48.0002
height = 96.0004

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:material:shader_param/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites:material:shader_param/noise")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shield:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shield:material:shader_param/progress")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.2]
}

[sub_resource type="Animation" id="5"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="6"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 128, 64, 64), Rect2(64, 128, 64, 64), Rect2(128, 128, 64, 64), Rect2(192, 128, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 128, 64, 64), Rect2(64, 128, 64, 64), Rect2(128, 128, 64, 64), Rect2(192, 128, 64, 64)]
}

[sub_resource type="Animation" id="7"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 64, 64, 64), Rect2(64, 64, 64, 64), Rect2(128, 64, 64, 64), Rect2(192, 64, 64, 64), Rect2(0, 64, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 64, 64, 64), Rect2(64, 64, 64, 64), Rect2(128, 64, 64, 64), Rect2(192, 64, 64, 64), Rect2(0, 64, 64, 64)]
}

[sub_resource type="Animation" id="8"]
resource_name = "material"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.3]
}

[sub_resource type="Animation" id="9"]
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.5, 0.5, 1.0, 0.25, 0.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="10"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 64, 64), Rect2(64, 0, 64, 64), Rect2(128, 0, 64, 64), Rect2(192, 0, 64, 64)]
}

[sub_resource type="Animation" id="11"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.2]
}

[sub_resource type="Animation" id="12"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.2, 0.0]
}

[sub_resource type="Animation" id="13"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 192, 64, 64), Rect2(64, 192, 64, 64), Rect2(128, 192, 64, 64), Rect2(192, 192, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 192, 64, 64), Rect2(64, 192, 64, 64), Rect2(128, 192, 64, 64), Rect2(192, 192, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xjfi"]
_data = {
"RESET": SubResource("4"),
"despawn": SubResource("5"),
"fall": SubResource("6"),
"idle": SubResource("7"),
"material": SubResource("8"),
"respawn": SubResource("9"),
"shield": SubResource("10"),
"shield_despawn": SubResource("11"),
"spawn_shield": SubResource("12"),
"unique": SubResource("13")
}

[sub_resource type="AnimationNodeAnimation" id="57"]
animation = &"RESET"

[sub_resource type="AnimationNodeAdd2" id="14"]

[sub_resource type="AnimationNodeAnimation" id="15"]
animation = &"despawn"

[sub_resource type="AnimationNodeAnimation" id="16"]
animation = &"fall"

[sub_resource type="AnimationNodeBlendTree" id="17"]
graph_offset = Vector2(-120, 110.5)
nodes/Add2/node = SubResource("14")
nodes/Add2/position = Vector2(220, 200)
nodes/Animation/node = SubResource("15")
nodes/Animation/position = Vector2(0, 200)
nodes/Animation2/node = SubResource("16")
nodes/Animation2/position = Vector2(0, 320)
nodes/output/position = Vector2(400, 200)
node_connections = [&"Add2", 0, &"Animation", &"Add2", 1, &"Animation2", &"output", 0, &"Add2"]

[sub_resource type="AnimationNodeAdd2" id="18"]

[sub_resource type="AnimationNodeAnimation" id="19"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="20"]
animation = &"material"

[sub_resource type="AnimationNodeBlendTree" id="21"]
nodes/Add2/node = SubResource("18")
nodes/Add2/position = Vector2(300, 100)
nodes/Animation/node = SubResource("19")
nodes/Animation/position = Vector2(60, 100)
nodes/Animation2/node = SubResource("20")
nodes/Animation2/position = Vector2(40, 220)
nodes/output/position = Vector2(500, 120)
node_connections = [&"Add2", 0, &"Animation", &"Add2", 1, &"Animation2", &"output", 0, &"Add2"]

[sub_resource type="AnimationNodeAdd2" id="22"]

[sub_resource type="AnimationNodeAdd2" id="23"]

[sub_resource type="AnimationNodeAdd2" id="24"]

[sub_resource type="AnimationNodeAnimation" id="25"]
animation = &"shield_despawn"

[sub_resource type="AnimationNodeAnimation" id="26"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="27"]
animation = &"material"

[sub_resource type="AnimationNodeAnimation" id="28"]
animation = &"shield"

[sub_resource type="AnimationNodeBlendTree" id="29"]
graph_offset = Vector2(0, 129.5)
nodes/Add2/node = SubResource("24")
nodes/Add2/position = Vector2(400, 240)
nodes/Add2-2/node = SubResource("22")
nodes/Add2-2/position = Vector2(600, 380)
nodes/Add2-3/node = SubResource("23")
nodes/Add2-3/position = Vector2(800, 500)
nodes/Animation/node = SubResource("25")
nodes/Animation/position = Vector2(180, 160)
nodes/Animation2/node = SubResource("26")
nodes/Animation2/position = Vector2(220, 320)
nodes/Animation3/node = SubResource("27")
nodes/Animation3/position = Vector2(400, 460)
nodes/Animation4/node = SubResource("28")
nodes/Animation4/position = Vector2(600, 560)
nodes/output/position = Vector2(1000, 500)
node_connections = [&"Add2", 0, &"Animation", &"Add2", 1, &"Animation2", &"Add2-2", 0, &"Add2", &"Add2-2", 1, &"Animation3", &"Add2-3", 0, &"Add2-2", &"Add2-3", 1, &"Animation4", &"output", 0, &"Add2-3"]

[sub_resource type="AnimationNodeAdd2" id="30"]

[sub_resource type="AnimationNodeAnimation" id="31"]
animation = &"respawn"

[sub_resource type="AnimationNodeAnimation" id="32"]
animation = &"fall"

[sub_resource type="AnimationNodeBlendTree" id="33"]
graph_offset = Vector2(0, 40)
nodes/Add2/node = SubResource("30")
nodes/Add2/position = Vector2(380, 100)
nodes/Animation/node = SubResource("31")
nodes/Animation/position = Vector2(80, 100)
nodes/Animation2/node = SubResource("32")
nodes/Animation2/position = Vector2(80, 240)
nodes/output/position = Vector2(600, 160)
node_connections = [&"Add2", 0, &"Animation", &"Add2", 1, &"Animation2", &"output", 0, &"Add2"]

[sub_resource type="AnimationNodeAdd2" id="34"]

[sub_resource type="AnimationNodeAdd2" id="35"]

[sub_resource type="AnimationNodeAnimation" id="36"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="37"]
animation = &"material"

[sub_resource type="AnimationNodeAnimation" id="38"]
animation = &"shield"

[sub_resource type="AnimationNodeBlendTree" id="39"]
nodes/Add2/node = SubResource("35")
nodes/Add2/position = Vector2(400, 60)
nodes/Add2-2/node = SubResource("34")
nodes/Add2-2/position = Vector2(600, 180)
nodes/Animation/node = SubResource("36")
nodes/Animation/position = Vector2(200, 0)
nodes/Animation2/node = SubResource("37")
nodes/Animation2/position = Vector2(200, 120)
nodes/Animation3/node = SubResource("38")
nodes/Animation3/position = Vector2(400, 240)
nodes/output/position = Vector2(800, 180)
node_connections = [&"Add2", 0, &"Animation", &"Add2", 1, &"Animation2", &"Add2-2", 0, &"Add2", &"Add2-2", 1, &"Animation3", &"output", 0, &"Add2-2"]

[sub_resource type="AnimationNodeAdd2" id="40"]

[sub_resource type="AnimationNodeAdd2" id="41"]

[sub_resource type="AnimationNodeAdd2" id="42"]

[sub_resource type="AnimationNodeAnimation" id="43"]
animation = &"spawn_shield"

[sub_resource type="AnimationNodeAnimation" id="44"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="45"]
animation = &"material"

[sub_resource type="AnimationNodeAnimation" id="46"]
animation = &"shield"

[sub_resource type="AnimationNodeBlendTree" id="47"]
nodes/Add2/node = SubResource("42")
nodes/Add2/position = Vector2(380, 160)
nodes/Add2-2/node = SubResource("40")
nodes/Add2-2/position = Vector2(600, 280)
nodes/Add2-3/node = SubResource("41")
nodes/Add2-3/position = Vector2(800, 420)
nodes/Animation/node = SubResource("43")
nodes/Animation/position = Vector2(140, 140)
nodes/Animation2/node = SubResource("44")
nodes/Animation2/position = Vector2(140, 280)
nodes/Animation3/node = SubResource("45")
nodes/Animation3/position = Vector2(380, 340)
nodes/Animation4/node = SubResource("46")
nodes/Animation4/position = Vector2(600, 460)
nodes/output/position = Vector2(1000, 420)
node_connections = [&"Add2", 0, &"Animation", &"Add2", 1, &"Animation2", &"Add2-2", 0, &"Add2", &"Add2-2", 1, &"Animation3", &"Add2-3", 0, &"Add2-2", &"Add2-3", 1, &"Animation4", &"output", 0, &"Add2-3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="48"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="49"]

[sub_resource type="AnimationNodeStateMachineTransition" id="50"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="51"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="52"]

[sub_resource type="AnimationNodeStateMachineTransition" id="53"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="54"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="58"]

[sub_resource type="AnimationNodeStateMachine" id="55"]
states/RESET/node = SubResource("57")
states/RESET/position = Vector2(22, 216)
states/despawn/node = SubResource("17")
states/despawn/position = Vector2(522, 332)
states/fall/node = SubResource("21")
states/fall/position = Vector2(252, 216)
states/not-shielded/node = SubResource("29")
states/not-shielded/position = Vector2(522, 64)
states/respawn/node = SubResource("33")
states/respawn/position = Vector2(22, 332)
states/shield/node = SubResource("39")
states/shield/position = Vector2(252, 64)
states/shielded/node = SubResource("47")
states/shielded/position = Vector2(22, 64)
transitions = ["despawn", "respawn", SubResource("48"), "shield", "not-shielded", SubResource("49"), "shielded", "shield", SubResource("50"), "not-shielded", "fall", SubResource("51"), "fall", "shielded", SubResource("52"), "fall", "despawn", SubResource("53"), "respawn", "fall", SubResource("54"), "RESET", "respawn", SubResource("58")]
graph_offset = Vector2(-194.586, 0)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("4")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 16)
emitting = false
amount = 32
lifetime = 2.5
emission_shape = 1
emission_sphere_radius = 32.0
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, -98)

[node name="Sprites" type="Node2D" parent="."]
material = ExtResource("3")
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("8")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Head" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Shield" type="Sprite2D" parent="."]
material = SubResource("1")
scale = Vector2(3, 3)
texture = ExtResource("12")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="EraserDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EraserDetector"]
rotation = 1.5708
shape = SubResource("3")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2")
initial_state = NodePath("Respawn")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("5")

[node name="Despawn" type="Node" parent="StateMachine"]
script = ExtResource("7")

[node name="Timer" type="Timer" parent="StateMachine/Despawn"]
wait_time = 0.7
one_shot = true

[node name="Respawn" type="Node" parent="StateMachine"]
script = ExtResource("6")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="DespawnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")
bus = &"SFX"

[node name="RespawnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
bus = &"SFX"

[node name="ShieldSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16")
volume_db = 8.0
pitch_scale = 2.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7xjfi")
}
autoplay = "RESET"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("55")
anim_player = NodePath("../AnimationPlayer")
parameters/despawn/Add2/add_amount = 1.0
parameters/fall/Add2/add_amount = 1.0
parameters/not-shielded/Add2/add_amount = 1.0
parameters/not-shielded/Add2-2/add_amount = 1.0
parameters/not-shielded/Add2-3/add_amount = 1.0
parameters/respawn/Add2/add_amount = 1.0
parameters/shield/Add2/add_amount = 1.0
parameters/shield/Add2-2/add_amount = 1.0
parameters/shielded/Add2/add_amount = 1.0
parameters/shielded/Add2-2/add_amount = 1.0
parameters/shielded/Add2-3/add_amount = 1.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("15")

[connection signal="area_entered" from="EraserDetector" to="." method="_on_EraserDetector_area_entered"]
[connection signal="area_exited" from="EraserDetector" to="." method="_on_EraserDetector_area_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_Respawn_timeout"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
